# ardan-simulasi-2022

./: README.md  mkdocs.yml  netlify.toml  pyproject.toml
docs/: dokumentasi-simulasi.md  index.md  install-git-mkdocs.md
site/: index.html  search.html  sitemap.xml
site/dokumentasi-simulasi/: index.html
site/install-git-mkdocs/: index.html
site/mkdocs/: search_index.json
