[tool.poetry]
name = "Simulasi"
version = "0.1.0"
description = "My simulation website for Arda"
authors = ["Ardan <ardan@me.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^0.16.3"
mkdocs-material = "^4.6.0"
pymdown-extensions = "^6.2.1"
fontawesome-markdown = "^0.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"